bash/k8s automation/automation-deployment/deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-svc
  namespace: default-namespace
  labels:
    app: default-svc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: default-svc
  template:
    metadata:
      labels:
        app: default-svc
    spec:
      containers:
      - name: default-svc
        image: registry-intl.ap-southeast-5.aliyuncs.com/koinworks/asgard-default:staging-1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: koinworksresgistry
      restartPolicy: Always
