bash/k8s automation/automation-deployment/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-svc
spec:
  selector:
    app: default-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
