bash/k8s automation/automation-deployment/ingress-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http: default-domain
      paths:
      - path: /
        backend:
          serviceName: default-svc
          servicePort: 80
